# nodeos_kinesis_plugin

./: CMakeLists.txt  README.md  kinesis_plugin.cpp  kinesis_producer_test.cpp
include/eosio/kinesis_plugin/: kinesis_plugin.hpp  kinesis_producer.hpp
